# platform.framework.web.wrt-commons

./: .gitignore  CMakeLists.txt  NOTICE  dir-struct.py  project.config  uncrustify.cfg  uncrustify.sh  wrt-commons  wrt-commons.manifest
examples/: CMakeLists.txt  DESCRIPTION
examples/binary_queue/: CMakeLists.txt  binary_queue.cpp
examples/copy/: CMakeLists.txt  copy.cpp
examples/crypto_hash/: CMakeLists.txt  crypto_hash.cpp
examples/dbus/client-example/: CMakeLists.txt  client-example.cpp
examples/dbus/server-example/: CMakeLists.txt  server-example.cpp
examples/event_delivery_test/: CMakeLists.txt  event_delivery_test.cpp
examples/fake_rpc/: CMakeLists.txt  fake_rpc.cpp
examples/metronome/: CMakeLists.txt  metronome_client.cpp  metronome_server.cpp
examples/rpc/: CMakeLists.txt  rpc.cpp
examples/simple/: CMakeLists.txt  simple.cpp
examples/single_instance/: CMakeLists.txt  single_instance.cpp
examples/socket/: CMakeLists.txt  socket.cpp
examples/tcpsock/: CMakeLists.txt  tcpsock.cpp
examples/timed_event/: CMakeLists.txt  timed_event.cpp
modules/: CMakeLists.txt
modules/ace/: CMakeLists.txt
modules/ace/configuration/: WACPolicy.xml  config.dtd  config.xml  demo.xml
modules/ace/dao/: AceDAO.cpp  AceDAOConversions.cpp  AceDAOReadOnly.cpp  AceDAOUtilities.cpp  AceDatabase.cpp  BaseAttribute.cpp  CMakeLists.txt  PromptModel.cpp
modules/ace/engine/: Attribute.cpp  CombinerImpl.cpp  Condition.cpp  ConfigurationManager.cpp  NodeFactory.cpp  Policy.cpp  PolicyEnforcementPoint.cpp  PolicyEvaluator.cpp  PolicyInformationPoint.cpp  Rule.cpp  Serializer.cpp  SettingsLogic.cpp  Subject.cpp  TreeNode.cpp  parser.cpp
modules/ace/orm/: ace_db
modules/auto_save_dao/: CMakeLists.txt
modules/auto_save_dao/dao/: AutoSaveDatabase.cpp  auto_save_dao.cpp  auto_save_dao_read_only.cpp  common_dao_types.cpp
modules/auto_save_dao/orm/: autosave_db  autosave_db_definitions  autosave_db_sql_generator.h  orm_generator_autosave.h
modules/certificate_dao/: CMakeLists.txt
modules/certificate_dao/dao/: certificate_dao.cpp  certificate_dao_types.cpp  certificate_database.cpp
modules/certificate_dao/orm/: certificate_db  certificate_db_definitions  certificate_db_sql_generator.h  orm_generator_certificate.h
modules/core/: DESCRIPTION  config.cmake
modules/core/include/: DESCRIPTION
modules/core/src/: abstract_waitable_input_adapter.cpp  abstract_waitable_input_output_adapter.cpp  abstract_waitable_output_adapter.cpp  address.cpp  application.cpp  apply.cpp  assert.cpp  atomic.cpp  binary_queue.cpp  char_traits.cpp  colors.cpp  copy.cpp  errno_string.cpp  exception.cpp  fast_delegate.cpp  file_input.cpp  file_input_mapping.cpp  file_output.cpp  generic_event.cpp  lexical_cast.cpp  main.cpp  mutable_task_list.cpp  mutex.cpp  named_base_pipe.cpp  named_input_pipe.cpp  named_output_pipe.cpp  noncopyable.cpp  once.cpp  read_write_mutex.cpp  recursive_mutex.cpp  scoped_dir.cpp  semaphore.cpp  serialization.cpp  single_instance.cpp  singleton.cpp  string.cpp  task.cpp  task_list.cpp  thread.cpp  type_list.cpp  (+5 more)
modules/custom_handler_dao/: CMakeLists.txt
modules/custom_handler_dao/dao/: CustomHandlerDatabase.cpp  custom_handler_dao.cpp  custom_handler_dao_read_only.cpp
modules/custom_handler_dao/orm/: custom_handler_db  custom_handler_db_definitions  custom_handler_db_sql_generator.h  gen_db_md5.sh  orm_generator_custom_handler.h
modules/db/: config.cmake
modules/dbus/: config.cmake
modules/encryption/: config.cmake
modules/event/: config.cmake
modules/i18n/: CMakeLists.txt
modules/localization/: config.cmake
modules/log/: config.cmake
modules/popup/: DESCRIPTION  config.cmake
modules/rpc/: config.cmake
modules/security_origin_dao/: CMakeLists.txt
modules/socket/: config.cmake
modules/support/: config.cmake  wrt_plugin_export.h
modules/test/: config.cmake
modules/utils/: config.cmake
modules/vcore/: CMakeLists.txt
modules/widget_dao/: CMakeLists.txt
modules/widget_interface_dao/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeUtils.txt
tests/ace/: AttributeSetter.cpp  AttributeSetter.h  CMakeLists.txt  Interfaces.cpp  Interfaces.h  PEPSingleton.cpp  PEPSingleton.h  TestSuite01.cpp  TestSuite02.cpp  TestSuite03.cpp  TestSuite04.cpp  TestSuite05.cpp  TestSuite06.cpp  TestSuite07.cpp  ace_tests.cpp  loop_control.cpp
tests/core/: CMakeLists.txt  DESCRIPTION  test_binary_queue.cpp  test_fast_delegate.cpp  test_log_unhandled_exception.cpp  test_once.cpp  test_scope_guard.cpp  test_scoped_dir.cpp  test_scoped_ptr.cpp  test_semaphore.cpp  test_serialization.cpp  test_static_block.cpp  test_string.cpp  test_task.cpp  test_thread.cpp  test_type_list.cpp  test_zip_input.cpp
tests/dao/: CMakeLists.txt  README  TestCases_CustomHandlerDAO.cpp  TestCases_FeatureDAO.cpp  TestCases_GlobalDAO.cpp  TestCases_PluginDAO.cpp  TestCases_PropertyDAO.cpp  TestCases_WidgetDAO.cpp  tests_dao.cpp  wrt_dao_tests_prepare_db.sh
tests/db/: CMakeLists.txt  main.cpp  test_orm.cpp  test_sql_connection.cpp
tests/dbus/: CMakeLists.txt  dbus_test.cpp  loop_control.cpp  main.cpp  test_cases.cpp  test_service.cpp
tests/dpl/: CMakeLists.txt  README
tests/event/: CMakeLists.txt  test_controller.cpp  test_event_support.cpp  test_ic_delegate.cpp
tests/files_localization/: CMakeLists.txt  test_localization.cpp  test_suite01.cpp  wrt_db_localization_prepare.sh
tests/i18n/: CMakeLists.txt  test_i18n_dao_read_only.cpp
tests/localization/: CMakeLists.txt  test_suite01.cpp
tests/localizationTagsProvider/: CMakeLists.txt  Localization_testcases.cpp  README  tests_miscunit.cpp
tests/test/: CMakeLists.txt  runner_child.cpp  runner_multiprocess.cpp  test_abstract_input_reader.cpp  test_process_pipe.cpp  test_value_separated_reader.cpp
tests/unit_tests/: CMakeLists.txt
tests/unused/: test_message_queue.cpp  test_shm.cpp  test_sql_connection.cpp  test_task.cpp
tests/utils/: CMakeLists.txt  path_tests.cpp  widget_version.cpp  wrt_utility.cpp
tests/vcore/: CMakeLists.txt  TestCRL.cpp  TestCRL.h  TestCases.cpp  TestEnv.cpp  TestEnv.h  vcore_tests.cpp
(+586 files in other folders)
