# Suppress all warnings; TODO: inhibit only specific warnings per target (TURNED OFF)
#SET(CMAKE_CXX_FLAGS_BACKUP ${CMAKE_CXX_FLAGS})
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")

INCLUDE(CMakeUtils.txt)

SET(TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(TESTS_COMMON_DIR "${TESTS_DIR}/common")

WRT_ADD_INTERNAL_DEPENDENCIES(
  ${TARGET_DPL_TEST_ENGINE_EFL}
)

ADD_SUBDIRECTORY(dao)
ADD_SUBDIRECTORY(dpl)
ADD_SUBDIRECTORY(unit_tests)

# Rollback CXX flags
#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_BACKUP})